@startuml
skinparam classAttributeIconSize 0
skinparam stereotypeBackgroundColor White
hide circle
hide empty members


skinparam class {
BackgroundColor Yellow
ArrowColor Red
}

together {
package "parser" {
abstract Parser #yellow ##[bold]grey {
~LOGGER:Logger {static}
#userInputString:String
+Parser(userInputString:String)
+getCommandType(userInputString:String):String
#getCommandArguments(userInputString:String):String
+parseInput():Command {abstract}
parseWorkoutIndex(commandArgs:String): int
parseWorkoutAndExerciseIndex(commandArgs:String): int[]
splitCommandWordsAndArgs(input:String, keyword:String):String {static}
parseArgsAsIndex(index:String):Integer {static}
}
class CommandManager {
-commandType:String
+generateCommand(userInputString:String):Command
}
class XYZCommandParser extends Parser {
+XYZCommandParser(userInputString:String)
-parseCommandArguments(commandArgs:String)
-prepareCommandParser(commandArgs:String)
+parseInput():Command
}
}

package "logger" {
class LoggerUtil #LightBlue##Blue
}

CommandManager --> "1  parser" Parser
Parser ..> LoggerUtil
}
@enduml